street test finished